--- a/example.htm
+++ b/example.htm
@@ -1,6 +1,7 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>KEK Online Class Library Examples</title>
 </head>
 <body>
